--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registro - Biblioteca</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="src/js/script.js"></script>
+
 </head>
 <body class="bg-[#fcfaf8] min-h-screen">
   <div class="flex items-center justify-center min-h-screen py-12 px-4 sm:px-6 lg:px-8">
