--- a/frontend/public/comunidade.html
+++ b/frontend/public/comunidade.html
@@ -19,106 +19,9 @@
   <link rel="icon" type="image/x-icon" href="../public/assets/logos/favicon.ico">
   <link rel="stylesheet" href="../src/styles/index.css">
   <link rel="stylesheet" href="../src/styles/style.css">
+  <link rel="stylesheet" href="../src/styles/styleComuni.css">
   <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-  <style>
-    .hidden {
-      display: none;
-    }
-
-    .active {
-      display: block;
-    }
-
-    .fade-in {
-      animation: fadeIn 0.5s ease-in;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    .discussion-card {
-      transition: all 0.3s ease;
-      border-left: 4px solid transparent;
-    }
-
-    .discussion-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-      border-left-color: #ff8200;
-    }
-
-    .comment {
-      border-left: 3px solid #f3ece7;
-      transition: border-color 0.3s ease;
-    }
-
-    .comment:hover {
-      border-left-color: #ff8200;
-    }
-
-    .like-btn {
-      transition: all 0.2s ease;
-    }
-
-    .like-btn:hover {
-      transform: scale(1.1);
-    }
-
-    .like-btn.liked {
-      color: #ef4444;
-    }
-
-    .tab-active {
-      border-bottom: 3px solid #ff8200;
-      color: #ff8200;
-    }
-
-    .user-avatar {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background: linear-gradient(135deg, #ff8200, #d67a32);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: white;
-      font-weight: bold;
-      font-size: 16px;
-    }
-
-    .online-indicator {
-      width: 10px;
-      height: 10px;
-      background: #10b981;
-      border-radius: 50%;
-      border: 2px solid white;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-    }
-
-    .notification {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      padding: 16px;
-      border-radius: 8px;
-      color: white;
-      z-index: 1000;
-      animation: slideIn 0.3s ease;
-    }
-
-    @keyframes slideIn {
-      from { transform: translateX(100%); opacity: 0; }
-      to { transform: translateX(0); opacity: 1; }
-    }
-
-    .notification.success { background: #10b981; }
-    .notification.error { background: #ef4444; }
-    .notification.info { background: #3b82f6; }
-  </style>
+  <script src="../src/js/script.js"></script>
 </head>
 
 <body class="bg-[#fcfaf8] min-h-screen">
@@ -162,7 +65,7 @@
       <div class="text-center mb-8 fade-in">
         <h1 class="text-[#1b130d] text-[32px] font-bold mb-4">Comunidade da Biblioteca Okukulanaua</h1>
         <p class="text-[#9a6c4c] text-lg max-w-2xl mx-auto">
-          Um espaço para partilhar ideias, debates, discutir livros e conectar com outros leitores apaixonados
+          Um espaço para partilhar ideias, debater, discutir livros e conexão
         </p>
       </div>
 
