--- a/frontend/index.html
+++ b/frontend/index.html
@@ -149,7 +149,7 @@
       </footer>
     </div>
   </div>
-  <script src="./public/assets/js/script.js"></script>
+  <script src="./public/assets/js/script.js" type="module"></script>
 </body>
 
 </html>
