atualização  type=module

--- a/frontend/public/comunidade.html
+++ b/frontend/public/comunidade.html
@@ -209,6 +209,6 @@
       </div>
     </div>
   </div>
-<script src="./assets/js/com.js"></script>
+<script src="./assets/js/com.js" type="module"></script>
 </body>
 </html>
