--- a/frontend/public/login.html
+++ b/frontend/public/login.html
@@ -51,7 +51,7 @@
         </div>
     </div>
 
-    <script>
+    <script  type="module">
         document.getElementById('login-form').addEventListener('submit', async (e) => {
             e.preventDefault();
             
