--- a/frontend/public/biblioteca.html
+++ b/frontend/public/biblioteca.html
@@ -223,7 +223,7 @@
     </div>
   </div>
 
-  <script>
+  <script  type="module"> 
     // Configuração da API
     const API_BASE_URL = 'http://localhost:3000/api';
 
