--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -367,7 +367,7 @@
     }
   </script>
 
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/js/script.js" type="module"></script>
 
 </body>
 
