--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -88,7 +88,7 @@
     </div>
   </div>
 
-  <script>
+  <script  type="module">
     document.getElementById('register-form').addEventListener('submit', async (e) => {
       e.preventDefault();
 
