--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,6 +21,8 @@
   <link rel="stylesheet" href="src/styles/style.css" />
   <!-- style-js -->
   <script src="src/js/script.js"></script>
+  <script src="https://cdn.tailwindcss.com"></script>
+
 
   <style>
     .hidden {
@@ -43,7 +45,7 @@
           <img src="./public/assets/logos/Okukulanaua_Logo.png" alt="">
         </div>
         <nav class="flex flex-1 justify-end gap-8" role="navigation" aria-label="Menu principal">
-         
+
           <div class="flex gap-2" id="user-actions">
             <!-- Botões serão carregados dinamicamente -->
           </div>
@@ -94,7 +96,7 @@
                 <p>Carregando books...</p>
               </div>
             </div>
-          </div> 
+          </div>
           <!-- Sessão 2: Novidades -->
           <h2 class="text-[#1b130d] text-[22px] font-bold leading-tight tracking-[-0.015em] px-4 pb-3 pt-5">
             Novidades</h2>
